Camlp5 Version 7.07:
--------------------

* [10 Oct 18] Changed '/bin/rm' into 'rm' in Makefiles. Can be changed by
  user by 'make RM=...'.
* [08 Oct 18] Updated for ocaml version 4.07.2.
* [19 Sep 18] Updated for ocaml upcomming version 4.08.0.
* [18 Sep 18] Fixed bug: using camlp5 in ocaml toplevel, the errors locations
  in files (with #use) where not displayed.
* [30 Aug 18] Updated for ocaml version 4.07.1 and upcomming version 4.08.0.

Camlp5 Version 7.06:
--------------------

* [17 Jul 18] Support nonrec type declaration (Kakadu).
* [27 Jun 18] Updated for ocaml upcomming version 4.08.0.
* [19 Jun 18] Add support for OCaml 4.07.0
* [19 Jun 18] Fix OPAM file [in particular avoid the filesystem deletion bug]
* [06 Apr 18] Safe API for grammar extension (Pierre-Marie Pedrot).

Camlp5 Version 7.05:
--------------------

* [22 Feb 18] Fixed compilation failure when compiled with ocaml
  versions 3.08.0 to 4.02.4 due to the time when the constructor
  Pconst_integer was created (at ocaml version 4.03.0 actually).
* [22 Feb 18] Added compatibility with (old) ocaml version 4.03.3.
* [20 Feb 18] Changed "make install" and "make uninstall" so that they
  do nothing if "configure" had failed.

Camlp5 Version 7.04:
--------------------

* [19 Feb 18] Updated for ocaml version 4.06.1 and 4.06.2.
* [02 Jan 18] Fixed missing treatment of native, 32 and 64 integers.

Camlp5 Version 7.03:
--------------------

* [20 Oct 17] Updated (again) for ocaml version 4.06.0.

Camlp5 Version 7.02:
--------------------

* [07 Oct 17] Updated for ocaml version 4.06.0.
* [22 Jul 17] Now "a.[i] := b" generates a call to Bytes.set instead
  of String.set, as from ocaml version 4.02.0.
* [18 Jul 17] Updated for ocaml future version 4.05.1.
* [13 Jul 17] Compilation from OCaml version 4.00.0 now using parsetree
  distributed with OCaml (-I +compiler-libs), no more the one copied from
  OCaml sources (on ocaml_stuff directory). Set at "configure" time. (Not