@@ -2,10 +2,10 @@ OVERVIEW
 
   Camlp5 is a preprocessor-pretty-printer of ocaml.
 
-  It is compatible with all versions of ocaml from 1.07 to 4.07.2 (when
+  It is compatible with all versions of ocaml from 1.07 to 4.10.0 (when
   they compile), and jocaml 3.12.0 to 3.12.1.
 
-  This Camlp5 version is 7.07.
+  This Camlp5 version is 7.08.
 
 INSTALL
 
