@@ -2,7 +2,7 @@
  "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <!-- Copyright (c) 2018 INRIA -->
+  <!-- Copyright (c) 2019 INRIA -->
   <title>Camlp5</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <style type="text/css"><!--
@@ -34,9 +34,9 @@
 <dl><dd>
 
 <p>Camlp5 is a preprocessor-pretty-printer of OCaml.<br/>
-It is compatible with OCaml versions from 1.07 to 4.07.2.</p>
+It is compatible with OCaml versions from 1.07 to 4.10.0.</p>
 
-<p>The current distributed version is <b>7.07</b> (released 2018-10-10).</p>
+<p>The current distributed version is <b>7.08</b> (released 2019-08-02).</p>
 
 <p>
 <a href="README.txt">README</a><br/>
@@ -54,7 +54,7 @@ It is compatible with OCaml versions from 1.07 to 4.07.2.</p>
 compile.</p>
 
 <p>Download the sources:
-  <a href="https://github.com/camlp5/camlp5/archive/rel707.tar.gz">camlp5-rel707.tar.gz</a>.</p>
+  <a href="https://github.com/camlp5/camlp5/archive/rel708.tar.gz">camlp5-rel708.tar.gz</a>.</p>
 
 
 <p>Browse the <a href="doc/htmlc/">documentation</a>.</p>
